# comservatory

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Creator_8hpp.html  Creator_8hpp__dep__incl.map  Creator_8hpp__dep__incl.md5  Creator_8hpp__incl.map  Creator_8hpp__incl.md5  Creator_8hpp_source.html  Doxyfile  Field_8hpp.html  Field_8hpp__dep__incl.map  Field_8hpp__dep__incl.md5  Field_8hpp__incl.map  Field_8hpp__incl.md5  Field_8hpp_source.html  Parser_8hpp.html  Parser_8hpp__dep__incl.map  Parser_8hpp__dep__incl.md5  Parser_8hpp__incl.map  Parser_8hpp__incl.md5  Parser_8hpp_source.html  ReadCsv_8hpp.html  ReadCsv_8hpp__dep__incl.map  ReadCsv_8hpp__dep__incl.md5  ReadCsv_8hpp__incl.map  ReadCsv_8hpp__incl.md5  ReadCsv_8hpp_source.html  Type_8hpp.html  Type_8hpp__dep__incl.map  Type_8hpp__dep__incl.md5  Type_8hpp_source.html  annotated.html  classcomservatory_1_1ReadCsv-members.html  classcomservatory_1_1ReadCsv.html  classcomservatory_1_1ReadCsv__coll__graph.map  classcomservatory_1_1ReadCsv__coll__graph.md5  classes.html  comservatory_8hpp.html  comservatory_8hpp__incl.map  comservatory_8hpp__incl.md5  comservatory_8hpp_source.html  dir_be0d14d2b560a7faf2d5c586e2d2dbc5.html  (+53 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  variables_0.js  (+3 more)
include/comservatory/: Creator.hpp  Field.hpp  Parser.hpp  ReadCsv.hpp  comservatory.hpp  convert.hpp  read.hpp
tests/: CMakeLists.txt
tests/src/: Field.cpp  GzipReader.cpp  Parser.cpp  TextReader.cpp  compare_contents.h  convert_boolean.cpp  convert_complex.cpp  convert_number.cpp  convert_string.cpp  temp_file_path.h  utils.h
